# Infotecs

./: CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  app  cmake_install.cmake  prog1  prog2  run.sh
include/: funktion.cpp  funktion.h
src/: funktion.cpp  prog1.cpp  prog2.cpp
src1/: prog1.cpp
src2/: prog2.cpp
